Incorrect position when dragging jQuery Draggable elements with position fixed after pinch zoom https://bugs.webkit.org/show_bug.cgi?id=171113 Source/WebCore:

rdar://problem/31746516

Reviewed by Tim Horton.

Make getBoundingClientRect() and getClientRects() return rects which are relative to the layout
viewport, rather than the visual viewport. This goes part of the way to fixing webkit.org/b/170981,
which aims to make pinch-zoom invisible to web pages ("inert visual viewport"). It fixes issues on various
sites like Facebook when zoomed.

Factor coordinate conversion code into functions on FrameView, which now documents
the various coordinate systems in a big comment. Document::adjustFloatQuadsForScrollAndAbsoluteZoomAndFrameScale()
and Document::adjustFloatRectForScrollAndAbsoluteZoomAndFrameScale() are renamed and factored
to use these helpers.

There are two behavior changes here:

1. FrameView::documentToClientOffset() now uses the origin of the layout viewport in the "document to client"
   coordinate mapping.

2. The two document functions would apply the scale and offset in the wrong order. We need
   to first undo the effects of CSS zoom, page zoom and page scale, and then map from document
   to client coordinates.

Tests: fast/visual-viewport/client-rects-relative-to-layout-viewport.html
       fast/zooming/client-rects-with-css-and-page-zoom.html

* dom/Document.cpp:
(WebCore::Document::convertAbsoluteToClientQuads):
(WebCore::Document::convertAbsoluteToClientRect):
(WebCore::Document::adjustFloatQuadsForScrollAndAbsoluteZoomAndFrameScale): Deleted.
(WebCore::Document::adjustFloatRectForScrollAndAbsoluteZoomAndFrameScale): Deleted.
* dom/Document.h:
* dom/Element.cpp:
(WebCore::Element::getClientRects):
(WebCore::Element::getBoundingClientRect):
* dom/Range.cpp:
(WebCore::Range::borderAndTextQuads):
* page/FrameView.cpp:
(WebCore::FrameView::absoluteToDocumentScaleFactor):
(WebCore::FrameView::absoluteToDocumentRect):
(WebCore::FrameView::absoluteToDocumentPoint):
(WebCore::FrameView::documentToClientOffset):
(WebCore::FrameView::documentToClientRect):
(WebCore::FrameView::documentToClientPoint):
* page/FrameView.h:
* platform/ScrollableArea.h: #pragma once
* platform/Scrollbar.h: #pragma once
* platform/Widget.h: #pragma once

LayoutTests:

Reviewed by Tim Horton.

Rebaseline tests which dumped the getBoundingClientRect for fixed elements; now that these
are layout viewport-relative, getBoundingClientRect() for a fixed element is unchanging.

New test that exercises getBoundingClientRect() and getClientRects() for fixed and absolute
elements after zooming.

* fast/events/autoscroll-when-zoomed.html: Adjust to account for behavior change.
* fast/visual-viewport/client-rects-relative-to-layout-viewport-expected.txt: Added.
* fast/visual-viewport/client-rects-relative-to-layout-viewport.html: Added.
* fast/visual-viewport/zoomed-fixed-expected.txt:
* fast/visual-viewport/zoomed-fixed-header-and-footer-expected.txt:
* fast/zooming/client-rect-in-fixed-zoomed-expected.txt:
* fast/zooming/client-rect-in-fixed-zoomed.html:
* fast/zooming/client-rects-with-css-and-page-zoom-expected.txt: Added.
* fast/zooming/client-rects-with-css-and-page-zoom.html: Added.
* platform/ios-wk2/fast/visual-viewport/client-rects-relative-to-layout-viewport-expected.txt: Added.
* platform/ios/TestExpectations: Mark imported/w3c/web-platform-tests/cssom-view/elementFromPoint.html as failing;
    it will be fixed via webkit.org/b/172019
* platform/ios/fast/visual-viewport/zoomed-fixed-expected.txt:
* platform/ios/fast/visual-viewport/zoomed-fixed-header-and-footer-expected.txt:

Canonical link: https://commits.webkit.org/188997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216803 268f45cc-cd09-0410-ab3c-d52691b4dbfc